$Id: History,v 1.2 2000-08-03 09:08:10 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

03-Aug-2000  G.Cosmo (photolepton_hadron-V02-00-00r)
- Changed usage of RandFlat::shootBit() to RandBit::shootBit() to fix
  events' reproducibility problem.

06-Dec-1999  G.Cosmo (photolepton_hadron-V00-01-01)
- Removed CPPFLAG option -g which was present in GNUmakefile to force
  debug compilation and turns out not to be portable on all compilers.

05-Dec-1999  G.Cosmo
- Created History file.