@@ -1,4 +1,4 @@
-$Id: History,v 1.12 2001-01-28 16:58:57 maire Exp $
+$Id: History,v 1.13 2001-02-05 17:59:34 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -17,8 +17,13 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
-28-01-01  M.Maire - materials-V03-00-02
-          new method G4Material::GetNuclearInterLength()
+Feb     05, 01 G.Cosmo - materials-V03-00-03
+               STL migration for G4OrderedTable and G4DataVector.
+               Modified files: G4SandiaTable.cc.
+               NOTE: this tag does not include changes in materials-V03-00-02.
+
+Jan     28, 01 M.Maire - materials-V03-00-02
+               new method G4Material::GetNuclearInterLength()
 	  
 Jan     16, 01 V.Ivanchenko - materials-V03-00-01
                IonisParamElm.cc : excitation potential is tabulated
