@@ -1,4 +1,4 @@
-$Id: History,v 1.2 2000-08-03 09:08:10 gcosmo Exp $
+$Id: History,v 1.3 2001-02-05 18:02:12 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+05-Feb-2001: G.Cosmo (photolepton_hadron-V03-00-00)
+- STL migration for G4OrderedTable and G4DataVector.
+  Modified files: G4MuNuclearInteraction.cc.
 
 03-Aug-2000  G.Cosmo (photolepton_hadron-V02-00-00r)
 - Changed usage of RandFlat::shootBit() to RandBit::shootBit() to fix
